resources/tests/files/fail/ObjectCreationWrongGenericCount.krna


fn f() {
    let elem1 = GenericStruct<string, string> { value: "string" };

}

struct GenericStruct<T> {
    value: T
}